fixing preloader css, annoying scrollbar bug

--- a/src/components/Preloader/preloader.css
+++ b/src/components/Preloader/preloader.css
@@ -1,8 +1,7 @@
 .preloader{
     height: 100vh;
-    width: 100%;
-    background: #000;
-    color: #FFF;
+    width: 100vw;
+    background: #051C2C;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -11,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .preloader .texts-container{
@@ -23,5 +22,5 @@
     font-size: 20px;
     font-weight: 800;
     overflow: hidden;
-    color: #FFF;
+    color: #00BCE1;
 }
